--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "i": "^0.3.7",
-    "mysql2": "^3.14.1"
+    "multer": "^1.4.5-lts.2",
+    "mysql2": "^3.14.1",
+    "slugify": "^1.6.6"
   }
 }
